@@ -120,9 +120,20 @@ public abstract class IncrementalGrowth<T extends Particle, U extends Crystal<T>
     }
 
     //Look for all open site on its lattice and sort by distance to available participants
+    //TODO: prefer particles that match the minority type on the crystal (according to the formula ratio) to keep ion levels balanced
     public ArrayList<CrystallizationMatch<T>> getAllCrystallizationMatchesSorted( Crystal<T> crystal ) {
         ArrayList<CrystallizationMatch<T>> matches = new ArrayList<CrystallizationMatch<T>>();
-        for ( Particle freeParticle : model.freeParticles ) {
+        final Class<? extends Particle> minorityType = crystal.getMinorityType();
+
+        System.out.println( "minority = " + minorityType );
+
+        //TODO: If minority type is null, then try to bring out of solution whichever type had more concentration in the model (according to the formula ratio), this will balance ion ratios across crystals
+        //TODO: And help to maintain a good balance
+
+        //If the crystal was balanced, allow adding either type.  If the crystal was unbalanced, add the minority type to restore balance
+        Iterable<? extends Particle> particlesToConsider = minorityType == null ? model.freeParticles : model.freeParticles.filter( minorityType );
+
+        for ( Particle freeParticle : particlesToConsider ) {
             for ( OpenSite<T> openSite : crystal.getOpenSites() ) {
                 if ( model.solution.shape.get().contains( openSite.shape.getBounds2D() ) && openSite.matches( freeParticle ) ) {
                     matches.add( new CrystallizationMatch<T>( (T) freeParticle, openSite ) );
